@@ -47,5 +47,6 @@ so user no need to use unbuffreed queries http://php.net/manual/en/ref.pdo-mysql
 @todo .. add chapter topics to user_guide. general topics - advanced topics - php5 libraries - php libraries
 @todo .. upload class security
 @todo .. add config load and lang load track support for profiler class
+@todo .. imlpement config class as config helper put config_item static function into config helper as none static
 
 @next version todo .. firewall class (integer, string validate for requests, login attempts for captcha) 
